--- a/source/src/qt/gui/CMakeLists.txt
+++ b/source/src/qt/gui/CMakeLists.txt
@@ -15,12 +15,14 @@ add_library(qt_gui
 	  menu_cart.cpp
 	  menu_main.cpp
 	  menu_sound.cpp
+	  menu_binary.cpp
 	  menu_screen.cpp
 	  mainwindow_utils.cpp
 	  util_fd.cpp
 	  util_cmt.cpp
 	  util_qd.cpp
 	  util_cart.cpp
+	  util_binary.cpp
 	  display_statusbar.cpp
 	  ${s_qt_gui_headers_MOC}
 )
