--- a/source/src/qt/debugger/CMakeLists.txt
+++ b/source/src/qt/debugger/CMakeLists.txt
@@ -1,12 +1,13 @@
-message("* qt/gui")
-#set(s_qt_gui_headers
-#	  commonclasses.h
-#	  mainwidget.h
-#)
-#QT4_WRAP_CPP(s_qt_gui_headers_MOC ${s_qt_gui_headers})
+message("* qt/debugger")
+
+set(s_qt_debugger_headers
+	  qt_debugger.h
+)
+QT4_WRAP_CPP(s_qt_debugger_headers_MOC ${s_qt_debugger_headers})
 
  
 add_library(qt_debugger
           qt_debugger.cpp
+	  ${s_qt_debugger_headers_MOC}
 )
 
