--- a/source/build-cmake/fp1100/CMakeLists.txt
+++ b/source/build-cmake/fp1100/CMakeLists.txt
@@ -51,7 +51,7 @@ set(USE_OPENMP ON CACHE BOOL "Build using OpenMP")
 set(USE_OPENCL ON CACHE BOOL "Build using OpenCL if enabled.")
 set(USE_OPENGL ON CACHE BOOL "Build using OpenGL")
 
-#set(WITH_DEBUGGER ON CACHE BOOL "Build witn FP1100 Debugger.")
+set(WITH_DEBUGGER ON CACHE BOOL "Build with FP1100 debugger.")
 
 include(detect_target_cpu)
 #include(windows-mingw-cross)
@@ -69,7 +69,6 @@ endif()
 
 
 #include_directories(${CMAKE_CURRENT_SOURCE_DIR})
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/vm)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/vm/fp1100)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/qt/fp1100)
 
