--- a/source/build-cmake/mz700/CMakeLists.txt
+++ b/source/build-cmake/mz700/CMakeLists.txt
@@ -7,13 +7,13 @@ cmake_minimum_required (VERSION 2.8)
 cmake_policy(SET CMP0011 NEW)
 
 message("")
-message("** Start of configure CommonSourceProject,MZ700, Qt **")
+message("** Start of configure CommonSourceProject,MZ-800, Qt **")
 message("")
 
 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/../cmake")
 
 
-project (emumz700)
+project (emumz800)
 
 set(LOCAL_LIBS 	   vm_mz700
 		   vm_vm
@@ -27,7 +27,6 @@ set(LOCAL_LIBS 	   vm_mz700
 set(VMFILES_BASE
 		   z80.cpp
 		   beep.cpp
-		   
 		   i8255.cpp
 		   i8253.cpp
 		   pcm1bit.cpp
@@ -65,8 +64,7 @@ set(BUILD_SHARED_LIBS OFF)
 set(USE_OPENMP ON CACHE BOOL "Build using OpenMP")
 set(USE_OPENCL ON CACHE BOOL "Build using OpenCL")
 set(USE_OPENGL ON CACHE BOOL "Build using OpenGL")
-set(XM7_VERSION 3)
-#set(WITH_DEBUGGER ON CACHE BOOL "Build witnDebugger.")
+set(WITH_DEBUGGER ON CACHE BOOL "Build with debugger.")
 
 include(detect_target_cpu)
 #include(windows-mingw-cross)
@@ -100,7 +98,7 @@ endif()
 
 
 #include_directories(${CMAKE_CURRENT_SOURCE_DIR})
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/vm)
+
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/vm/mz700)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/vm/fmgen)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/qt/mz700)
