--- a/source/z80tvgame_i8255.vcproj
+++ b/source/z80tvgame_i8255.vcproj
@@ -2,8 +2,8 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="9.00"
-	Name="fm77av"
-	ProjectGUID="{19644030-FB96-4EE0-8819-86D8D13C25A7}"
+	Name="z80tvgame_i8255"
+	ProjectGUID="{F62D036D-7569-431B-9C55-C056A4D3145A}"
 	TargetFrameworkVersion="131072"
 	>
 	<Platforms>
@@ -42,17 +42,17 @@
 				MkTypLibCompatible="true"
 				SuppressStartupBanner="true"
 				TargetEnvironment="1"
-				TypeLibraryName=".\Debug/fm77av.tlb"
+				TypeLibraryName=".\Debug/z80tvgame_i8255.tlb"
 				HeaderFileName=""
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_FM77AV"
+				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_Z80TVGAME;_USE_I8255"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="1"
-				PrecompiledHeaderFile=".\Debug/fm77av.pch"
+				PrecompiledHeaderFile=".\Debug/z80tvgame_i8255.pch"
 				AssemblerListingLocation=".\Debug/"
 				ObjectFile=".\Debug/"
 				ProgramDataBaseFileName=".\Debug/"
@@ -75,11 +75,11 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="odbc32.lib odbccp32.lib winmm.lib dsound.lib imm32.lib vfw32.lib"
-				OutputFile=".\Debug/fm77av.exe"
+				OutputFile=".\Debug/z80tvgame_i8255.exe"
 				LinkIncremental="2"
 				SuppressStartupBanner="true"
 				GenerateDebugInformation="true"
-				ProgramDatabaseFile=".\Debug/fm77av.pdb"
+				ProgramDatabaseFile=".\Debug/z80tvgame_i8255.pdb"
 				SubSystem="2"
 				RandomizedBaseAddress="1"
 				DataExecutionPrevention="0"
@@ -97,7 +97,7 @@
 			<Tool
 				Name="VCBscMakeTool"
 				SuppressStartupBanner="true"
-				OutputFile=".\Debug/fm77av.bsc"
+				OutputFile=".\Debug/z80tvgame_i8255.bsc"
 			/>
 			<Tool
 				Name="VCFxCopTool"
@@ -138,18 +138,18 @@
 				MkTypLibCompatible="true"
 				SuppressStartupBanner="true"
 				TargetEnvironment="1"
-				TypeLibraryName=".\Release/fm77av.tlb"
+				TypeLibraryName=".\Release/z80tvgame_i8255.tlb"
 				HeaderFileName=""
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				InlineFunctionExpansion="2"
-				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_FM77AV"
+				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_Z80TVGAME;_USE_I8255"
 				StringPooling="true"
 				RuntimeLibrary="0"
 				EnableFunctionLevelLinking="true"
-				PrecompiledHeaderFile=".\Release/fm77av.pch"
+				PrecompiledHeaderFile=".\Release/z80tvgame_i8255.pch"
 				AssemblerListingLocation=".\Release/"
 				ObjectFile=".\Release/"
 				ProgramDataBaseFileName=".\Release/"
@@ -171,10 +171,10 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="odbc32.lib odbccp32.lib winmm.lib dsound.lib imm32.lib vfw32.lib"
-				OutputFile=".\Release/fm77av.exe"
+				OutputFile=".\Release/z80tvgame_i8255.exe"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
-				ProgramDatabaseFile=".\Release/fm77av.pdb"
+				ProgramDatabaseFile=".\Release/z80tvgame_i8255.pdb"
 				SubSystem="2"
 				RandomizedBaseAddress="1"
 				DataExecutionPrevention="0"
@@ -192,7 +192,7 @@
 			<Tool
 				Name="VCBscMakeTool"
 				SuppressStartupBanner="true"
-				OutputFile=".\Release/fm77av.bsc"
+				OutputFile=".\Release/z80tvgame_i8255.bsc"
 			/>
 			<Tool
 				Name="VCFxCopTool"
@@ -422,46 +422,6 @@
 				Filter="cpp"
 				>
 				<File
-					RelativePath="src\vm\datarec.cpp"
-					>
-					<FileConfiguration
-						Name="Debug|Win32"
-						>
-						<Tool
-							Name="VCCLCompilerTool"
-							PreprocessorDefinitions=""
-						/>
-					</FileConfiguration>
-					<FileConfiguration
-						Name="Release|Win32"
-						>
-						<Tool
-							Name="VCCLCompilerTool"
-							PreprocessorDefinitions=""
-						/>
-					</FileConfiguration>
-				</File>
-				<File
-					RelativePath="src\vm\disk.cpp"
-					>
-					<FileConfiguration
-						Name="Debug|Win32"
-						>
-						<Tool
-							Name="VCCLCompilerTool"
-							PreprocessorDefinitions=""
-						/>
-					</FileConfiguration>
-					<FileConfiguration
-						Name="Release|Win32"
-						>
-						<Tool
-							Name="VCCLCompilerTool"
-							PreprocessorDefinitions=""
-						/>
-					</FileConfiguration>
-				</File>
-				<File
 					RelativePath="src\vm\event.cpp"
 					>
 					<FileConfiguration
@@ -482,47 +442,7 @@
 					</FileConfiguration>
 				</File>
 				<File
-					RelativePath="src\vm\mb8877.cpp"
-					>
-					<FileConfiguration
-						Name="Debug|Win32"
-						>
-						<Tool
-							Name="VCCLCompilerTool"
-							PreprocessorDefinitions=""
-						/>
-					</FileConfiguration>
-					<FileConfiguration
-						Name="Release|Win32"
-						>
-						<Tool
-							Name="VCCLCompilerTool"
-							PreprocessorDefinitions=""
-						/>
-					</FileConfiguration>
-				</File>
-				<File
-					RelativePath="src\vm\mc6809.cpp"
-					>
-					<FileConfiguration
-						Name="Debug|Win32"
-						>
-						<Tool
-							Name="VCCLCompilerTool"
-							PreprocessorDefinitions=""
-						/>
-					</FileConfiguration>
-					<FileConfiguration
-						Name="Release|Win32"
-						>
-						<Tool
-							Name="VCCLCompilerTool"
-							PreprocessorDefinitions=""
-						/>
-					</FileConfiguration>
-				</File>
-				<File
-					RelativePath="src\vm\memory.cpp"
+					RelativePath="src\vm\i8255.cpp"
 					>
 					<FileConfiguration
 						Name="Debug|Win32"
@@ -562,26 +482,6 @@
 					</FileConfiguration>
 				</File>
 				<File
-					RelativePath="src\vm\ym2203.cpp"
-					>
-					<FileConfiguration
-						Name="Debug|Win32"
-						>
-						<Tool
-							Name="VCCLCompilerTool"
-							PreprocessorDefinitions=""
-						/>
-					</FileConfiguration>
-					<FileConfiguration
-						Name="Release|Win32"
-						>
-						<Tool
-							Name="VCCLCompilerTool"
-							PreprocessorDefinitions=""
-						/>
-					</FileConfiguration>
-				</File>
-				<File
 					RelativePath="src\vm\z80.cpp"
 					>
 					<FileConfiguration
@@ -601,118 +501,13 @@
 						/>
 					</FileConfiguration>
 				</File>
-				<Filter
-					Name="fmgen Source Files"
-					Filter="cpp"
-					>
-					<File
-						RelativePath="src\vm\fmgen\file.cpp"
-						>
-						<FileConfiguration
-							Name="Debug|Win32"
-							>
-							<Tool
-								Name="VCCLCompilerTool"
-								PreprocessorDefinitions=""
-							/>
-						</FileConfiguration>
-						<FileConfiguration
-							Name="Release|Win32"
-							>
-							<Tool
-								Name="VCCLCompilerTool"
-								PreprocessorDefinitions=""
-							/>
-						</FileConfiguration>
-					</File>
-					<File
-						RelativePath="src\vm\fmgen\fmgen.cpp"
-						>
-						<FileConfiguration
-							Name="Debug|Win32"
-							>
-							<Tool
-								Name="VCCLCompilerTool"
-								PreprocessorDefinitions=""
-							/>
-						</FileConfiguration>
-						<FileConfiguration
-							Name="Release|Win32"
-							>
-							<Tool
-								Name="VCCLCompilerTool"
-								PreprocessorDefinitions=""
-							/>
-						</FileConfiguration>
-					</File>
-					<File
-						RelativePath="src\vm\fmgen\fmtimer.cpp"
-						>
-						<FileConfiguration
-							Name="Debug|Win32"
-							>
-							<Tool
-								Name="VCCLCompilerTool"
-								PreprocessorDefinitions=""
-							/>
-						</FileConfiguration>
-						<FileConfiguration
-							Name="Release|Win32"
-							>
-							<Tool
-								Name="VCCLCompilerTool"
-								PreprocessorDefinitions=""
-							/>
-						</FileConfiguration>
-					</File>
-					<File
-						RelativePath="src\vm\fmgen\opna.cpp"
-						>
-						<FileConfiguration
-							Name="Debug|Win32"
-							>
-							<Tool
-								Name="VCCLCompilerTool"
-								PreprocessorDefinitions=""
-							/>
-						</FileConfiguration>
-						<FileConfiguration
-							Name="Release|Win32"
-							>
-							<Tool
-								Name="VCCLCompilerTool"
-								PreprocessorDefinitions=""
-							/>
-						</FileConfiguration>
-					</File>
-					<File
-						RelativePath="src\vm\fmgen\psg.cpp"
-						>
-						<FileConfiguration
-							Name="Debug|Win32"
-							>
-							<Tool
-								Name="VCCLCompilerTool"
-								PreprocessorDefinitions=""
-							/>
-						</FileConfiguration>
-						<FileConfiguration
-							Name="Release|Win32"
-							>
-							<Tool
-								Name="VCCLCompilerTool"
-								PreprocessorDefinitions=""
-							/>
-						</FileConfiguration>
-					</File>
-				</Filter>
 			</Filter>
 			<Filter
 				Name="VM Driver Source Files"
 				Filter="cpp"
 				>
 				<File
-					RelativePath="src\vm\fm7\display.cpp"
+					RelativePath="src\vm\z80tvgame\joystick.cpp"
 					>
 					<FileConfiguration
 						Name="Debug|Win32"
@@ -732,7 +527,7 @@
 					</FileConfiguration>
 				</File>
 				<File
-					RelativePath="src\vm\fm7\floppy.cpp"
+					RelativePath="src\vm\z80tvgame\memory.cpp"
 					>
 					<FileConfiguration
 						Name="Debug|Win32"
@@ -752,127 +547,7 @@
 					</FileConfiguration>
 				</File>
 				<File
-					RelativePath="src\vm\fm7\fm7.cpp"
-					>
-					<FileConfiguration
-						Name="Debug|Win32"
-						>
-						<Tool
-							Name="VCCLCompilerTool"
-							PreprocessorDefinitions=""
-						/>
-					</FileConfiguration>
-					<FileConfiguration
-						Name="Release|Win32"
-						>
-						<Tool
-							Name="VCCLCompilerTool"
-							PreprocessorDefinitions=""
-						/>
-					</FileConfiguration>
-				</File>
-				<File
-					RelativePath="src\vm\fm7\fm7_mainio.cpp"
-					>
-					<FileConfiguration
-						Name="Debug|Win32"
-						>
-						<Tool
-							Name="VCCLCompilerTool"
-							PreprocessorDefinitions=""
-						/>
-					</FileConfiguration>
-					<FileConfiguration
-						Name="Release|Win32"
-						>
-						<Tool
-							Name="VCCLCompilerTool"
-							PreprocessorDefinitions=""
-						/>
-					</FileConfiguration>
-				</File>
-				<File
-					RelativePath="src\vm\fm7\fm7_mainmem.cpp"
-					>
-					<FileConfiguration
-						Name="Debug|Win32"
-						>
-						<Tool
-							Name="VCCLCompilerTool"
-							PreprocessorDefinitions=""
-						/>
-					</FileConfiguration>
-					<FileConfiguration
-						Name="Release|Win32"
-						>
-						<Tool
-							Name="VCCLCompilerTool"
-							PreprocessorDefinitions=""
-						/>
-					</FileConfiguration>
-				</File>
-				<File
-					RelativePath="src\vm\fm7\kanjirom.cpp"
-					>
-					<FileConfiguration
-						Name="Debug|Win32"
-						>
-						<Tool
-							Name="VCCLCompilerTool"
-							PreprocessorDefinitions=""
-						/>
-					</FileConfiguration>
-					<FileConfiguration
-						Name="Release|Win32"
-						>
-						<Tool
-							Name="VCCLCompilerTool"
-							PreprocessorDefinitions=""
-						/>
-					</FileConfiguration>
-				</File>
-				<File
-					RelativePath="src\vm\fm7\keyboard.cpp"
-					>
-					<FileConfiguration
-						Name="Debug|Win32"
-						>
-						<Tool
-							Name="VCCLCompilerTool"
-							PreprocessorDefinitions=""
-						/>
-					</FileConfiguration>
-					<FileConfiguration
-						Name="Release|Win32"
-						>
-						<Tool
-							Name="VCCLCompilerTool"
-							PreprocessorDefinitions=""
-						/>
-					</FileConfiguration>
-				</File>
-				<File
-					RelativePath="src\vm\fm7\mb61vh010.cpp"
-					>
-					<FileConfiguration
-						Name="Debug|Win32"
-						>
-						<Tool
-							Name="VCCLCompilerTool"
-							PreprocessorDefinitions=""
-						/>
-					</FileConfiguration>
-					<FileConfiguration
-						Name="Release|Win32"
-						>
-						<Tool
-							Name="VCCLCompilerTool"
-							PreprocessorDefinitions=""
-						/>
-					</FileConfiguration>
-				</File>
-				<File
-					RelativePath="src\vm\fm7\sound.cpp"
+					RelativePath="src\vm\z80tvgame\z80tvgame.cpp"
 					>
 					<FileConfiguration
 						Name="Debug|Win32"
@@ -927,10 +602,6 @@
 				Filter="h"
 				>
 				<File
-					RelativePath="src\vm\datarec.h"
-					>
-				</File>
-				<File
 					RelativePath="src\vm\debugger.h"
 					>
 				</File>
@@ -939,23 +610,11 @@
 					>
 				</File>
 				<File
-					RelativePath="src\vm\disk.h"
-					>
-				</File>
-				<File
 					RelativePath="src\vm\event.h"
 					>
 				</File>
 				<File
-					RelativePath="src\vm\mb8877.h"
-					>
-				</File>
-				<File
-					RelativePath="src\vm\mc6809.h"
-					>
-				</File>
-				<File
-					RelativePath="src\vm\memory.h"
+					RelativePath="src\vm\i8255.h"
 					>
 				</File>
 				<File
@@ -967,92 +626,24 @@
 					>
 				</File>
 				<File
-					RelativePath="src\vm\ym2203.h"
-					>
-				</File>
-				<File
 					RelativePath="src\vm\z80.h"
 					>
 				</File>
-				<Filter
-					Name="fmgen Header Files"
-					>
-					<File
-						RelativePath="src\vm\fmgen\diag.h"
-						>
-					</File>
-					<File
-						RelativePath="src\vm\fmgen\file.h"
-						>
-					</File>
-					<File
-						RelativePath="src\vm\fmgen\fmgen.h"
-						>
-					</File>
-					<File
-						RelativePath="src\vm\fmgen\fmgeninl.h"
-						>
-					</File>
-					<File
-						RelativePath="src\vm\fmgen\fmtimer.h"
-						>
-					</File>
-					<File
-						RelativePath="src\vm\fmgen\headers.h"
-						>
-					</File>
-					<File
-						RelativePath="src\vm\fmgen\misc.h"
-						>
-					</File>
-					<File
-						RelativePath="src\vm\fmgen\opna.h"
-						>
-					</File>
-					<File
-						RelativePath="src\vm\fmgen\psg.h"
-						>
-					</File>
-					<File
-						RelativePath="src\vm\fmgen\types.h"
-						>
-					</File>
-				</Filter>
 			</Filter>
 			<Filter
 				Name="VM Driver Header Files"
 				Filter="h"
 				>
 				<File
-					RelativePath="src\vm\fm7\fm7.h"
+					RelativePath="src\vm\z80tvgame\joystick.h"
 					>
 				</File>
 				<File
-					RelativePath="src\vm\fm7\fm7_common.h"
+					RelativePath="src\vm\z80tvgame\memory.h"
 					>
 				</File>
 				<File
-					RelativePath="src\vm\fm7\fm7_dipsw.h"
-					>
-				</File>
-				<File
-					RelativePath="src\vm\fm7\fm7_display.h"
-					>
-				</File>
-				<File
-					RelativePath="src\vm\fm7\fm7_keyboard.h"
-					>
-				</File>
-				<File
-					RelativePath="src\vm\fm7\fm7_mainio.h"
-					>
-				</File>
-				<File
-					RelativePath="src\vm\fm7\fm7_mainmem.h"
-					>
-				</File>
-				<File
-					RelativePath="src\vm\fm7\mb61vh010.h"
+					RelativePath="src\vm\z80tvgame\z80tvgame.h"
 					>
 				</File>
 			</Filter>
@@ -1062,11 +653,15 @@
 			Filter="ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe"
 			>
 			<File
-				RelativePath="src\res\fm77av.ico"
+				RelativePath="src\res\resource.h"
 				>
 			</File>
 			<File
-				RelativePath="src\res\fm77av.rc"
+				RelativePath="src\res\z80tvgame.ico"
+				>
+			</File>
+			<File
+				RelativePath="src\res\z80tvgame.rc"
 				>
 				<FileConfiguration
 					Name="Debug|Win32"
@@ -1086,10 +681,6 @@
 						AdditionalIncludeDirectories="src\res"
 					/>
 				</FileConfiguration>
-			</File>
-			<File
-				RelativePath="src\res\resource.h"
-				>
 			</File>
 		</Filter>
 	</Files>
