--- a/source/pc8801ma.vcxproj
+++ b/source/pc8801ma.vcxproj
@@ -11,7 +11,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{2438D482-00A9-40F3-B064-D64049995D6F}</ProjectGuid>
+    <ProjectGuid>{699AB843-1860-4ABF-B52C-D6A84D0F81E8}</ProjectGuid>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
@@ -58,16 +58,16 @@
       <MkTypLibCompatible>true</MkTypLibCompatible>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <TargetEnvironment>Win32</TargetEnvironment>
-      <TypeLibraryName>.\Debug/fm77av.tlb</TypeLibraryName>
+      <TypeLibraryName>.\Debug/pc8801ma.tlb</TypeLibraryName>
       <HeaderFileName />
     </Midl>
     <ClCompile>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;_FM77AV;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;_PC8801MA;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <MinimalRebuild>true</MinimalRebuild>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
-      <PrecompiledHeaderOutputFile>.\Debug/fm77av.pch</PrecompiledHeaderOutputFile>
+      <PrecompiledHeaderOutputFile>.\Debug/pc8801ma.pch</PrecompiledHeaderOutputFile>
       <AssemblerListingLocation>.\Debug/</AssemblerListingLocation>
       <ObjectFileName>.\Debug/</ObjectFileName>
       <ProgramDataBaseFileName>.\Debug/</ProgramDataBaseFileName>
@@ -75,13 +75,6 @@
       <WarningLevel>Level3</WarningLevel>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
-      <AdditionalIncludeDirectories>C:\Program Files\Microsoft DirectX SDK %28June 2010%29\Include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <IntrinsicFunctions>true</IntrinsicFunctions>
-      <MultiProcessorCompilation>false</MultiProcessorCompilation>
-      <BufferSecurityCheck>true</BufferSecurityCheck>
-      <AdditionalOptions>/arch:SSE2 %(AdditionalOptions)</AdditionalOptions>
-      <EnableParallelCodeGeneration>true</EnableParallelCodeGeneration>
-      <EnableEnhancedInstructionSet>StreamingSIMDExtensions2</EnableEnhancedInstructionSet>
     </ClCompile>
     <ResourceCompile>
       <PreprocessorDefinitions>_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
@@ -89,19 +82,18 @@
     </ResourceCompile>
     <Link>
       <AdditionalDependencies>odbc32.lib;odbccp32.lib;winmm.lib;dsound.lib;imm32.lib;vfw32.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <OutputFile>.\Debug/fm77av.exe</OutputFile>
+      <OutputFile>.\Debug/pc8801ma.exe</OutputFile>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <ProgramDatabaseFile>.\Debug/fm77av.pdb</ProgramDatabaseFile>
+      <ProgramDatabaseFile>.\Debug/pc8801ma.pdb</ProgramDatabaseFile>
       <SubSystem>Windows</SubSystem>
       <RandomizedBaseAddress>false</RandomizedBaseAddress>
       <DataExecutionPrevention />
       <TargetMachine>MachineX86</TargetMachine>
-      <AdditionalLibraryDirectories>C:\Program Files\Microsoft DirectX SDK %28June 2010%29\Lib\x86;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
     <Bscmake>
       <SuppressStartupBanner>true</SuppressStartupBanner>
-      <OutputFile>.\Debug/fm77av.bsc</OutputFile>
+      <OutputFile>.\Debug/pc8801ma.bsc</OutputFile>
     </Bscmake>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -110,16 +102,17 @@
       <MkTypLibCompatible>true</MkTypLibCompatible>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <TargetEnvironment>Win32</TargetEnvironment>
-      <TypeLibraryName>.\Release/fm77av.tlb</TypeLibraryName>
+      <TypeLibraryName>.\Release/pc8801ma.tlb</TypeLibraryName>
       <HeaderFileName />
     </Midl>
     <ClCompile>
       <Optimization>MaxSpeed</Optimization>
       <InlineFunctionExpansion>AnySuitable</InlineFunctionExpansion>
-      <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;_FM77AV;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;_PC8801MA;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <StringPooling>false</StringPooling>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
-      <PrecompiledHeaderOutputFile>.\Release/fm77av.pch</PrecompiledHeaderOutputFile>
+      <FunctionLevelLinking>true</FunctionLevelLinking>
+      <PrecompiledHeaderOutputFile>.\Release/pc8801ma.pch</PrecompiledHeaderOutputFile>
       <AssemblerListingLocation>.\Release/</AssemblerListingLocation>
       <ObjectFileName>.\Release/</ObjectFileName>
       <ProgramDataBaseFileName>.\Release/</ProgramDataBaseFileName>
@@ -127,16 +120,12 @@
       <WarningLevel>Level3</WarningLevel>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <AdditionalIncludeDirectories>C:\Program Files\Microsoft DirectX SDK %28June 2010%29\Include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <OmitFramePointers>false</OmitFramePointers>
-      <EnableFiberSafeOptimizations>true</EnableFiberSafeOptimizations>
-      <MultiProcessorCompilation>true</MultiProcessorCompilation>
-      <BufferSecurityCheck>false</BufferSecurityCheck>
-      <EnableEnhancedInstructionSet>StreamingSIMDExtensions2</EnableEnhancedInstructionSet>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
-      <FunctionLevelLinking>false</FunctionLevelLinking>
+      <EnableFiberSafeOptimizations>true</EnableFiberSafeOptimizations>
       <EnableParallelCodeGeneration>true</EnableParallelCodeGeneration>
-      <OpenMPSupport>false</OpenMPSupport>
+      <EnableEnhancedInstructionSet>StreamingSIMDExtensions2</EnableEnhancedInstructionSet>
+      <MultiProcessorCompilation>true</MultiProcessorCompilation>
     </ClCompile>
     <ResourceCompile>
       <PreprocessorDefinitions>NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
@@ -144,20 +133,18 @@
     </ResourceCompile>
     <Link>
       <AdditionalDependencies>odbc32.lib;odbccp32.lib;winmm.lib;dsound.lib;imm32.lib;vfw32.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <OutputFile>.\Release/fm77av.exe</OutputFile>
+      <OutputFile>.\Release/pc8801ma.exe</OutputFile>
       <SuppressStartupBanner>true</SuppressStartupBanner>
-      <ProgramDatabaseFile>.\Release/fm77av.pdb</ProgramDatabaseFile>
+      <ProgramDatabaseFile>.\Release/pc8801ma.pdb</ProgramDatabaseFile>
       <SubSystem>Windows</SubSystem>
       <RandomizedBaseAddress>false</RandomizedBaseAddress>
       <DataExecutionPrevention />
       <TargetMachine>MachineX86</TargetMachine>
       <AdditionalLibraryDirectories>C:\Program Files\Microsoft DirectX SDK %28June 2010%29\Lib\x86;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <LinkTimeCodeGeneration>UseLinkTimeCodeGeneration</LinkTimeCodeGeneration>
-      <OptimizeReferences>true</OptimizeReferences>
     </Link>
     <Bscmake>
       <SuppressStartupBanner>true</SuppressStartupBanner>
-      <OutputFile>.\Release/fm77av.bsc</OutputFile>
+      <OutputFile>.\Release/pc8801ma.bsc</OutputFile>
     </Bscmake>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -166,26 +153,21 @@
     <ClCompile Include="src\emu.cpp" />
     <ClCompile Include="src\fifo.cpp" />
     <ClCompile Include="src\fileio.cpp" />
-    <ClCompile Include="src\vm\datarec.cpp" />
     <ClCompile Include="src\vm\disk.cpp" />
     <ClCompile Include="src\vm\event.cpp" />
-    <ClCompile Include="src\vm\fm7\display.cpp" />
-    <ClCompile Include="src\vm\fm7\floppy.cpp" />
-    <ClCompile Include="src\vm\fm7\fm7.cpp" />
-    <ClCompile Include="src\vm\fm7\fm7_mainio.cpp" />
-    <ClCompile Include="src\vm\fm7\fm7_mainmem.cpp" />
-    <ClCompile Include="src\vm\fm7\kanjirom.cpp" />
-    <ClCompile Include="src\vm\fm7\keyboard.cpp" />
-    <ClCompile Include="src\vm\fm7\mb61vh010.cpp" />
-    <ClCompile Include="src\vm\fm7\sound.cpp" />
     <ClCompile Include="src\vm\fmgen\fmgen.cpp" />
     <ClCompile Include="src\vm\fmgen\fmtimer.cpp" />
     <ClCompile Include="src\vm\fmgen\opna.cpp" />
     <ClCompile Include="src\vm\fmgen\psg.cpp" />
-    <ClCompile Include="src\vm\mb8877.cpp" />
-    <ClCompile Include="src\vm\mc6809.cpp" />
-    <ClCompile Include="src\vm\memory.cpp" />
+    <ClCompile Include="src\vm\i8251.cpp" />
+    <ClCompile Include="src\vm\i8253.cpp" />
+    <ClCompile Include="src\vm\i8255.cpp" />
+    <ClCompile Include="src\vm\pc80s31k.cpp" />
+    <ClCompile Include="src\vm\pc8801\pc88.cpp" />
+    <ClCompile Include="src\vm\pc8801\pc8801.cpp" />
     <ClCompile Include="src\vm\pcm1bit.cpp" />
+    <ClCompile Include="src\vm\upd1990a.cpp" />
+    <ClCompile Include="src\vm\upd765a.cpp" />
     <ClCompile Include="src\vm\ym2203.cpp" />
     <ClCompile Include="src\vm\z80.cpp" />
     <ClCompile Include="src\win32_debugger.cpp" />
@@ -201,19 +183,10 @@
     <ClInclude Include="src\fifo.h" />
     <ClInclude Include="src\fileio.h" />
     <ClInclude Include="src\res\resource.h" />
-    <ClInclude Include="src\vm\datarec.h" />
     <ClInclude Include="src\vm\debugger.h" />
     <ClInclude Include="src\vm\device.h" />
     <ClInclude Include="src\vm\disk.h" />
     <ClInclude Include="src\vm\event.h" />
-    <ClInclude Include="src\vm\fm7\fm7.h" />
-    <ClInclude Include="src\vm\fm7\fm7_common.h" />
-    <ClInclude Include="src\vm\fm7\fm7_dipsw.h" />
-    <ClInclude Include="src\vm\fm7\fm7_display.h" />
-    <ClInclude Include="src\vm\fm7\fm7_keyboard.h" />
-    <ClInclude Include="src\vm\fm7\fm7_mainio.h" />
-    <ClInclude Include="src\vm\fm7\fm7_mainmem.h" />
-    <ClInclude Include="src\vm\fm7\mb61vh010.h" />
     <ClInclude Include="src\vm\fmgen\diag.h" />
     <ClInclude Include="src\vm\fmgen\file.h" />
     <ClInclude Include="src\vm\fmgen\fmgen.h" />
@@ -224,19 +197,24 @@
     <ClInclude Include="src\vm\fmgen\opna.h" />
     <ClInclude Include="src\vm\fmgen\psg.h" />
     <ClInclude Include="src\vm\fmgen\types.h" />
-    <ClInclude Include="src\vm\mb8877.h" />
-    <ClInclude Include="src\vm\mc6809.h" />
-    <ClInclude Include="src\vm\memory.h" />
+    <ClInclude Include="src\vm\i8251.h" />
+    <ClInclude Include="src\vm\i8253.h" />
+    <ClInclude Include="src\vm\i8255.h" />
+    <ClInclude Include="src\vm\pc80s31k.h" />
+    <ClInclude Include="src\vm\pc8801\pc88.h" />
+    <ClInclude Include="src\vm\pc8801\pc8801.h" />
     <ClInclude Include="src\vm\pcm1bit.h" />
+    <ClInclude Include="src\vm\upd1990a.h" />
+    <ClInclude Include="src\vm\upd765a.h" />
     <ClInclude Include="src\vm\vm.h" />
     <ClInclude Include="src\vm\ym2203.h" />
     <ClInclude Include="src\vm\z80.h" />
   </ItemGroup>
   <ItemGroup>
-    <Image Include="src\res\fm77av.ico" />
+    <Image Include="src\res\pc8801ma.ico" />
   </ItemGroup>
   <ItemGroup>
-    <ResourceCompile Include="src\res\fm77av.rc">
+    <ResourceCompile Include="src\res\pc8801ma.rc">
       <AdditionalIncludeDirectories Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">src\res;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <AdditionalIncludeDirectories Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">src\res;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ResourceCompile>
